fix(summary): patch spacing with ToC

--- a/site/gdocs/centered-article.scss
+++ b/site/gdocs/centered-article.scss
@@ -156,6 +156,10 @@
     padding: 32px 0;
 }
 
+.owidArticle details.summary {
+    margin-bottom: 32px;
+}
+
 .owidArticle .fixedSection {
     display: contents;
     position: relative;
